[gd_scene load_steps=7 format=3 uid="uid://le7ov2wv1ds0"]

[ext_resource type="Script" path="res://ui/custom_levels/custom_stage_panel.gd" id="1_13h3g"]
[ext_resource type="FontFile" uid="uid://d3ya2ni4d4nbf" path="res://assets/UI/font/Static/Shantell_Sans-Normal-Bold.otf" id="3_1uq0p"]
[ext_resource type="Texture2D" uid="uid://dcaepi8xstsoo" path="res://assets/UI/icons/edit.png" id="3_qp8u6"]
[ext_resource type="Texture2D" uid="uid://bb7i5b8y202hv" path="res://assets/UI/icons/play.png" id="4_ig3jc"]
[ext_resource type="Texture2D" uid="uid://cermd6etki4u7" path="res://assets/UI/icons/share.png" id="5_cbikw"]
[ext_resource type="Texture2D" uid="uid://35h1fdqv3232" path="res://assets/UI/icons/trash.png" id="6_whibi"]

[node name="CustomStagePanel" type="Panel"]
custom_minimum_size = Vector2(728, 123)
offset_right = 728.0
offset_bottom = 123.0
script = ExtResource("1_13h3g")

[node name="StageLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 24.0
offset_top = 24.0
offset_right = 181.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("3_1uq0p")
theme_override_font_sizes/font_size = 21
text = "CustomLevel12"

[node name="AuthorLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 56.0
offset_right = 122.0
offset_bottom = 79.0
text = "By Unknown"

[node name="CreateDateLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -440.0
offset_top = 18.5
offset_right = -342.0
offset_bottom = 41.5
grow_horizontal = 0
grow_vertical = 2
text = "0/12/123"
horizontal_alignment = 2

[node name="EditButton" type="Button" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 32.0
offset_right = 511.0
offset_bottom = 96.0
icon = ExtResource("3_qp8u6")
icon_alignment = 1
expand_icon = true

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -45.5
offset_right = -24.0
offset_bottom = 34.5
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("4_ig3jc")
icon_alignment = 1
expand_icon = true

[node name="ShareButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -29.5
offset_right = -104.0
offset_bottom = 34.5
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("5_cbikw")
icon_alignment = 1
expand_icon = true

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -29.5
offset_right = -160.0
offset_bottom = 34.5
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("6_whibi")
icon_alignment = 1
expand_icon = true

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
dialog_autowrap = true

[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
